--- a/index.html
+++ b/index.html
@@ -4,22 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- css -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&family=Raleway:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link rel="stylesheet" href="vendor/vegas/vegas.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Document</title>
+    
+<title>Cotizador de seguros</title>
 </head>
-<body>
-   <header>
-   </header>
+<body onload="">
+    <div class="container">
+        <header>
+            <h1>Cotizador de Seguro de Auto</h1>
+        </header>
+        <div class="formulario">
+            <form>
+                <div id="msj.error.cotizador"></div>
+                <div class="campo">
+                    <label>Marca</label>
+                    <select name="marca" id="marca">
+                        <option value="">Seleccionar</option>
+                        <option value="toyota">Toyota</option>
+                        <option value="volkswagen">Volkswagen</option>
+                        <option value="ford">Ford</option>
+                    </select>
+                </div>
 
-  <footer>
-  </footer>
+                <div class="campo">
+                    <label>Año</label>
+                    <select name="year" id="year">
+                        <option value="">Seleccionar</option>
+                        <option value="2023">2023</option>
+                        <option value="2022">2022</option>
+                        <option value="2021">2021</option>
+                        <option value="2020">2020</option>
+                        <option value="2019">2019</option>
+                    </select>
+                </div>
 
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>    
+                <div class="campo">
+                    <label>Plan</label>
+                    <input 
+                        type="radio"
+                        name="plan"
+                        value="basico"
+                        class="radio"
+                        id="basico"
+                    /> Básico
+                
+                    <input 
+                        type="radio"
+                        name="plan"
+                        value="completo"
+                        class="radio"
+                        id="completo"
+                    /> Completo
+                </div>
+                <input type="button" onclick="cotizarSeguro()" class="button-primary u-full-width" value="Cotizar"
+                />
+            </form>
+            <div class="mensaje" id="msj">Elegí marca, año y tipo de seguro a contratar</div>
+            <div id="resumen" style="display: none;"></div>
+            <div class="" id="resultado" style="display: none;"></div>
+        </div>
+    </div>
 </body>
-<script src="javascript/main.js"></script>
+<script src="http://code.jquery.com/jquery.min.js"></script>
+<script src="vendor/vegas/vegas.min.js"></script>
+<script src="javascript/script.js"></script>
 </html>
